<resources>
    <string name="app_name">TestApp</string>
    <string name="action_einstellungen">Einstellungen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="weiter">Weiter</string>
    <string name="zurueck">Zurück</string>
    <string name="anmelden">Login</string>
    <string name="abmelden">Logout</string>
    <string name="loginToast">Sie sind eingeloggt</string>
    <string name="username">Nachname</string>
    <string name="password">Passwort</string>
    <string name="usernameLogin">Nachname:</string>
    <string name="passwordLogin">Passwort:</string>
    <string name="passwordEmpty">Es wurde kein Password eingegeben</string>
    <string name="usernameEmpty">Es wurde keine Benutzername eingegeben</string>
    <string name="usernameAndPwEmpty">Es wurde weder ein Benutzername noch ein Passwort eingegeben</string>
    <string name="emptyDataSet">Keine Daten vorhanden</string>
    <string name="wrongCredentials">Passwort oder Nutzername nicht Korrekt oder Nutzer nicht vorhanden</string>

    <!-- Hauptmenü -->
    <string name="mainMenu">Hauptmenü</string>
    <string name="hours">Stundenerfassung</string>
    <string name="holiday">Urlaubsanträge</string>
    <string name="illness">Arbeitsunfähigkeit</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Nachrichten</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Deine Signatur</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
