<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <EditText
            android:layout_width="213dp"
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/inputUsername"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="63dp" app:layout_constraintBottom_toTopOf="@+id/tVPassword"/>
    <TextView
            android:text="@string/anmelden"
            android:layout_width="99dp"
            android:layout_height="45dp" android:id="@+id/textViewLogin"
            android:textSize="30sp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/inputPassword"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="416dp"/>
    <TextView
            android:text="@string/usernameLogin"
            android:layout_width="211dp"
            android:layout_height="55dp" android:id="@+id/tVUsername"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/inputUsername"/>
    <TextView
            android:text="@string/passwordLogin"
            android:layout_width="215dp"
            android:layout_height="34dp" android:id="@+id/tVPassword"
            android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/inputPassword"/>
    <Button
            android:text="@string/anmelden"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/loginButton"
            android:layout_marginTop="35dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
